[package]
  name = "chirpstack-mqtt-forwarder"
  description = "ChirpStack MQTT Forwarder"
  repository = "https://github.com/chirpstack/chirpstack-mqtt-forwarder"
  homepage = "https://www.chirpstack.io/"
  license = "MIT"
  version = "4.2.0-test.1"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2021"
  publish = false

[dependencies]
  clap = { version = "4.4", default-features = false, features = [
    "std",
    "help",
    "usage",
    "derive",
  ] }
  chirpstack_api = { version = "4.6", default-features = false, features = [
    "json",
  ] }
  lrwn_filters = { version = "4.6", features = ["serde"] }
  serde_json = "1.0"
  serde = { version = "1.0", features = ["derive"] }
  log = "0.4"
  simple_logger = "4.2"
  syslog = "6.1"
  prost = "0.12"
  anyhow = "1.0"
  toml = "0.8"
  once_cell = "1.19"
  chrono = "0.4"
  signal-hook = "0.3"
  hex = "0.4"
  base64 = "0.21"
  rand = "0.8"
  pbjson-types = "0.6"
  rumqttc = { version = "0.23", features = ["url"] }
  rustls-native-certs = "0.6"
  rustls-pemfile = "1.0"
  handlebars = "4.5"
  tokio = { version = "1.35", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "process",
    "io-util",
    "sync",
    "time",
  ] }
  async-trait = "0.1"
  zmq = { version = "0.10", optional = true }

[dev-dependencies]
  dotenv = "0.15"

[features]
  default = ["semtech_udp", "concentratord"]
  semtech_udp = []
  concentratord = ["zmq"]

# Debian packaging.
[package.metadata.deb]
  assets = [
    [
      "target/release/chirpstack-mqtt-forwarder",
      "usr/bin/",
      "755",
    ],
    [
      "packaging/debian/chirpstack-mqtt-forwarder.toml",
      "etc/chirpstack-mqtt-forwarder/",
      "640",
    ],
  ]
  conf-files = ["/etc/chirpstack-mqtt-forwarder/chirpstack-mqtt-forwarder.toml"]
  suggests = "mosquitto"
  maintainer-scripts = "packaging/debian/"
  systemd-units = { enable = true }

[profile.release]
  strip = true
  opt-level = "z"
  lto = true
  codegen-units = 1
  panic = "abort"
