[package]
  name = "chirpstack-mqtt-forwarder"
  description = "ChirpStack MQTT Forwarder"
  repository = "https://github.com/chirpstack/chirpstack-mqtt-forwarder"
  homepage = "https://www.chirpstack.io/"
  license = "MIT"
  version = "4.4.1"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2021"
  publish = false

[dependencies]
  clap = { version = "4.5", default-features = false, features = [
    "std",
    "help",
    "usage",
    "derive",
  ] }
  chirpstack_api = { version = "4.16", default-features = false, features = [
    "json",
  ] }
  lrwn_filters = { version = "4.16", features = ["serde"] }
  serde_json = "1.0"
  serde = { version = "1.0", features = ["derive"] }
  humantime-serde = "1.1"
  log = "0.4"
  simple_logger = { version = "5.1", default-features = false, features = [
    "timestamps",
  ] }
  syslog = "7.0"
  anyhow = "1.0"
  toml = { version = "0.9", default-features = false, features = [
    "std",
    "parse",
    "serde",
  ] }
  chrono = { version = "0.4", default-features = false, features = ["now"] }
  signal-hook = "0.4"
  hex = "0.4"
  base64 = "0.22"
  getrandom = { version = "0.3", features = ["std"] }
  rumqttc = { version = "0.25", default-features = false, features = [
    "url",
    "websocket",
    "use-rustls-no-provider",
  ] }
  url = "2.5"
  rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "std",
    "tls12",
    "ring",
  ] }
  rustls-native-certs = "0.8"
  rustls-pemfile = "2.2"
  rustls-pki-types = "1.12"
  handlebars = "6.4"
  tokio = { version = "1.49", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "process",
    "io-util",
    "sync",
    "time",
  ] }
  async-trait = "0.1"
  zmq = { version = "0.10", optional = true }

[dev-dependencies]
  dotenv = "0.15"

[features]
  default = ["semtech_udp", "concentratord"]
  semtech_udp = []
  concentratord = ["zmq"]

  # Debian packaging.
  [package.metadata.deb]
    assets = [
      [
        "target/release/chirpstack-mqtt-forwarder",
        "usr/bin/",
        "755",
      ],
      [
        "packaging/debian/chirpstack-mqtt-forwarder.toml",
        "etc/chirpstack-mqtt-forwarder/",
        "640",
      ],
    ]
    conf-files = [
      "/etc/chirpstack-mqtt-forwarder/chirpstack-mqtt-forwarder.toml",
    ]
    suggests = "mosquitto"
    maintainer-scripts = "packaging/debian/"
    systemd-units = { enable = true }

[profile.release]
  strip = true
  opt-level = "z"
  lto = true
  codegen-units = 1
  panic = "abort"
